feat: component group fix: password generator

--- a/evaluator/src/app/components/admin/evaluator/evaluator.component.html
+++ b/evaluator/src/app/components/admin/evaluator/evaluator.component.html
@@ -31,7 +31,9 @@
           <td> 1 </td>
           <td> Franciscleide </td>
           <td> francs_senior </td>
-          <td> @S45sb97q3 </td>
+          <td> <button type="button" class="btn btn-generate-password" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="aqui vai a senha">
+            Gerar senha
+          </button> </td>
           <td class="btn-actions">
             <button>
               <i class="fa-solid fa-pencil" style="color: #1890ff;"></i>
