--- a/evaluator/src/app/components/admin/team/team.component.html
+++ b/evaluator/src/app/components/admin/team/team.component.html
@@ -31,7 +31,11 @@
           <td> 1 </td>
           <td> Josélinson </td>
           <td> grupo1_c# </td>
-          <td> !asb97q3 </td>
+          <td><button type="button" class="btn btn-generate-password" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="aqui vai a senha">
+            Gerar senha
+          </button>
+          
+           </td>
           <td class="btn-actions">
             <button>
               <i class="fa-solid fa-pencil" style="color: #1890ff;"></i>
