--- a/evaluator/src/app/components/admin/admin.component.html
+++ b/evaluator/src/app/components/admin/admin.component.html
@@ -1,18 +1,15 @@
 <div class="sidebar">
   <div class="img">
-    <button class="button-home" [routerLink]="['/admin/home']"><img src="assets/img/logo-devs2blu.png"
-        alt="logo devs2blu"></button>
+    <button class="button-home" [routerLink]="['/admin/home']"><img src="assets/img/logo-devs2blu.png" alt="logo devs2blu"></button>
   </div>
-  <h1 class="cadastro">CADASTROS</h1>
+  <h1 class="cadastro"> CADASTROS </h1>
   <button class="button-menu" [routerLink]="['/admin/equipes']">Equipes</button>
   <button class="button-menu" [routerLink]="['/admin/avaliadores']">Avaliadores</button>
   <button class="button-menu" [routerLink]="['/admin/criterios']">Critérios</button>
   <button class="button-menu" [routerLink]="['/admin/projetos']">Projetos</button>
-  <h1 class="gerenciamento">GERENCIAMENTO</h1>
+  <h1 class="gerenciamento"> GERENCIAMENTO </h1>
   <button class="button-menu" [routerLink]="['/admin/apresentacoes']">Apresentações</button>
-
-  <button class="btn-exit">Sair</button>
-
+  <button class="btn-exit"> Sair </button>
 </div>
 <div class="rotas content">
   <router-outlet></router-outlet>
