--- a/evaluator/src/app/components/admin/criterion/dialog-criterion/dialog-criterion.component.html
+++ b/evaluator/src/app/components/admin/criterion/dialog-criterion/dialog-criterion.component.html
@@ -1,17 +1,17 @@
 <div class="dialog-form">
   <h2> Formulário de Critério </h2>
   <div class="line"></div>
-  <form [formGroup]="form" (ngSubmit)="onSubmit(form)">
+  <form [formGroup]="form" (ngSubmit)="onSubmit(form);">
     <div class="input-container">
       <label for="type"> TIPO </label>
       <div class="input-group">
         <div class="icon">
           <i class="fa-regular fa-pen-to-square fa-lg"></i>
         </div>
-        <input type="text" class="input-form" id="type" placeholder="Ex.: Funcionalidade" formControlName="type">
+        <input type="text" class="input-form" id="type" placeholder="Ex.: Funcionalidade" formControlName="name">
       </div>
     </div>
-    <div class="input-container ">
+    <div class="input-container">
       <label for="description"> DESCRIÇÃO </label>
       <div class="input-group">
         <div class="icon icon-textarea">
