--- a/evaluator/src/app/components/admin/evaluator/dialog-evaluator/dialog-evaluator.component.html
+++ b/evaluator/src/app/components/admin/evaluator/dialog-evaluator/dialog-evaluator.component.html
@@ -1,9 +1,9 @@
 <div class="dialog-form">
   <h2> Formulário de Avaliador </h2>
   <div class="line"></div>
-  <form [formGroup]="form" (ngSubmit)="onSubmit(form)">
+  <form [formGroup]="form" (ngSubmit)="onSubmit(form);">
     <div class="input-container">
-      <label for="name">NOME</label>
+      <label for="name"> NOME </label>
       <div class="input-group">
         <div class="icon">
           <i class="fas fa-user fa-lg"></i>
@@ -18,7 +18,7 @@
           <i class="fas fa-user fa-lg"></i>
         </div>
           <input type="text" class="input-form" id="user" placeholder="Ex. joao.silva" formControlName="usuario">
-        
+
       </div>
         <div class="form-actions">
           <button type="button" class="cancel" mat-dialog-close> Cancelar </button>
