--- a/evaluator/src/app/components/admin/evaluator/evaluator.component.html
+++ b/evaluator/src/app/components/admin/evaluator/evaluator.component.html
@@ -12,7 +12,7 @@
         </div>
         <input type="text" class="input-filter" id="filter">
       </div>
-      <button class="btn-cadastrar" (click)="openDialog()"> CADASTRAR </button>
+      <button class="btn-cadastrar" (click)="openDialog();"> CADASTRAR </button>
     </div>
   </div>
   <div class="table">
@@ -27,19 +27,19 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td> 1 </td>
-          <td> Franciscleide </td>
-          <td> francs_senior </td>
-          <td> <button type="button" class="btn btn-generate-password" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="aqui vai a senha">
-            Gerar senha
-          </button> </td>
+        <tr *ngFor="let evaluator of data">
+          <td> {{ evaluator.id }}</td>
+          <td> {{ evaluator.name }} </td>
+          <td> {{ evaluator.username }} </td>
+          <td>
+            <button type="button" class="btn btn-generate-password" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="aqui vai a senha"> Gerar senha </button>
+          </td>
           <td class="btn-actions">
             <button>
-              <i class="fa-solid fa-pencil" style="color: #1890ff;"></i>
+              <i class="fa-solid fa-pencil" style="color: #1890ff;" (click)="edit(evaluator);"></i>
             </button>
             <button>
-              <i class="fa-regular fa-trash-can" style="color: #dc143c;"></i>
+              <i class="fa-regular fa-trash-can" style="color: #dc143c;" (click)="remove(evaluator);"></i>
             </button>
           </td>
         </tr>
