--- a/evaluator/src/app/components/admin/project/dialog-project/dialog-project.component.html
+++ b/evaluator/src/app/components/admin/project/dialog-project/dialog-project.component.html
@@ -1,23 +1,23 @@
 <div class="dialog-form">
   <h2> Formulário de Projeto </h2>
   <div class="line"></div>
-  <form [formGroup]="form" (ngSubmit)="onSubmit(form)">
+  <form [formGroup]="form" (ngSubmit)="onSubmit(form);">
     <div class="input-container">
-      <label for="title"> TÍTULO </label>
+      <label for="title"> NOME </label>
       <div class="input-group">
         <div class="icon">
           <i class="fas fa-user fa-lg"></i>
         </div>
-        <input type="text" class="input-form" id="title" formControlName="titulo">
+        <input type="text" class="input-form" id="title" formControlName="name">
       </div>
     </div>
-    <div class="input-container" *ngFor="let criterio of criteriaList; let i = index">
+    <div class="input-container" *ngFor="let criterion of criteriaList; let i = index">
       <div class="input-group input-group-checkbox">
         <div class="checkbox">
-          <input type="checkbox" [formControlName]="'selecionarCriterio' + i">
-          <label>{{ criterio.toUpperCase() }}</label>
+          <input type="checkbox" [formControlName]="'criterion' + i">
+          <label> {{ criterion.toUpperCase() }} </label>
         </div>
-        <input type="number" class="input-peso" [formControlName]="'pesoCriterio' + i" placeholder="Peso">
+        <input type="number" class="input-peso" [formControlName]="'weight' + i" placeholder="Peso">
       </div>
     </div>
     <div class="form-actions">
