--- a/evaluator/src/app/components/admin/team/dialog-team/dialog-team.component.html
+++ b/evaluator/src/app/components/admin/team/dialog-team/dialog-team.component.html
@@ -1,30 +1,29 @@
 <div class="dialog-form">
   <h2> Formulário de Equipe </h2>
   <div class="line"></div>
-  <form [formGroup]="form" (ngSubmit)="onSubmit(form)">
+  <form [formGroup]="form" (ngSubmit)="onSubmit(form);">
     <div class="input-container">
       <label for="representative"> REPRESENTANTE </label>
       <div class="input-group">
         <div class="icon">
           <i class="fas fa-user fa-lg"></i>
         </div>
-        <input type="text" class="input-form" id="representative" placeholder="Ex. João da Silva"
+        <input type="text" class="input-form" id="representative" placeholder="Ex. Nome Sobrenome"
           formControlName="name">
       </div>
     </div>
-      <div class="input-container">
-        <label for="user"> USUÁRIO </label>
-        <div class="input-group">
-          <div class="icon">
-            <i class="fas fa-user fa-lg"></i>
-          </div>
-          <input type="text" class="input-form" id="user" placeholder="Ex.: joao.silva" formControlName="username">
+    <div class="input-container">
+      <label for="user"> USUÁRIO </label>
+      <div class="input-group">
+        <div class="icon">
+          <i class="fas fa-user fa-lg"></i>
         </div>
-
-        <div class="form-actions">
-          <button type="button" class="cancel" mat-dialog-close> Cancelar </button>
-          <button type="submit" class="submit"> Enviar </button>
-        </div>
+        <input type="text" class="input-form" id="user" placeholder="Ex.: nome.sobrenome" formControlName="username">
       </div>
+      <div class="form-actions">
+        <button type="button" class="cancel" mat-dialog-close> Cancelar </button>
+        <button type="submit" class="submit"> Enviar </button>
+      </div>
+    </div>
   </form>
 </div>
