--- a/evaluator/src/app/components/admin/presentation/presentation.component.scss
+++ b/evaluator/src/app/components/admin/presentation/presentation.component.scss
@@ -135,7 +135,44 @@ button {
 .fa-stop {
   color: var(--red);
 }
-
+.td-accordion{
+  width: 500px;
+}
+.example-accordion-item-header{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.li-evaluators{
+  width: 100%;
+  display: flex;
+  height: 1.5rem;
+  .name-evaluator{
+    width: 50%;
+    font-style: italic;
+    text-align: left;
+  }
+  .button-delete{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    .btn-confirm{
+      background-color: var(--red);
+      color: var(--white);
+      padding: 0 4px;
+      border-radius: 3px;
+    }
+    .btn-closeP{
+      background-color: var(--grey);
+      color: var(--white);
+      padding: 0 4px;
+      border-radius: 3px;
+    }
+  }
+  
+}
 
 @media screen and (max-width: 768px) {
   .input-icons {
@@ -154,5 +191,20 @@ button {
 
   .body {
     padding: 30px 0;
+  }
+}
+@media screen and (max-width: 400px){
+
+  .li-evaluators{
+    height: auto;
+  }
+  .button-delete{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .name-evaluator{
+    display: flex;
+    align-items: center;
   }
 }
