fix: font-weight ID

--- a/evaluator/src/app/components/admin/team/team.component.html
+++ b/evaluator/src/app/components/admin/team/team.component.html
@@ -19,7 +19,7 @@
     <table>
       <thead>
         <tr>
-          <th> ID </th>
+          <th class="bold"> ID </th>
           <th> REPRESENTANTE </th>
           <th> USUÁRIOS </th>
           <th> SENHA </th>
