--- a/evaluator/src/app/components/admin/evaluator/evaluator.component.scss
+++ b/evaluator/src/app/components/admin/evaluator/evaluator.component.scss
@@ -119,7 +119,9 @@ button {
 .btn-generate-password:focus{
   box-shadow: none;
 }
-
+.bold {
+  font-weight: 700;
+}
 
 @media screen and (max-width: 768px) {
   .input-icons {
