--- a/evaluator/src/app/components/admin/evaluator/evaluator.component.html
+++ b/evaluator/src/app/components/admin/evaluator/evaluator.component.html
@@ -8,7 +8,7 @@
     <div class="input-icons">
       <div class="search-input">
         <div class="icon">
-          <i class="fas fa-search fa-lg" style="color: #ffffff;"></i>
+          <i class="fas fa-search fa-lg"></i>
         </div>
         <input type="text" class="input-filter" id="filter">
       </div>
@@ -36,10 +36,10 @@
           </td>
           <td class="btn-actions">
             <button>
-              <i class="fa-solid fa-pencil" style="color: #1890ff;" (click)="edit(evaluator);"></i>
+              <i class="fa-solid fa-pencil" (click)="edit(evaluator);"></i>
             </button>
             <button>
-              <i class="fa-regular fa-trash-can" style="color: #dc143c;" (click)="remove(evaluator);"></i>
+              <i class="fa-regular fa-trash-can" (click)="remove(evaluator);"></i>
             </button>
           </td>
         </tr>
