--- a/evaluator/src/app/components/admin/evaluator/evaluator.component.scss
+++ b/evaluator/src/app/components/admin/evaluator/evaluator.component.scss
@@ -8,7 +8,15 @@ h1 {
   font-size: 1.75rem;
   font-weight: 400;
 }
-
+.fa-lg{
+  color: var(--white);
+}
+.fa-pencil{
+  color: var(--light-blue);
+}
+.fa-trash-can{
+  color: var(--red);
+}
 .bold{
   font-weight: 700;
 }
