--- a/evaluator/src/app/components/admin/team/team.component.scss
+++ b/evaluator/src/app/components/admin/team/team.component.scss
@@ -14,7 +14,15 @@ h1 {
 .bold {
   font-weight: 700;
 }
-
+.fa-lg{
+  color: var(--white);
+}
+.fa-pencil{
+  color: var(--light-blue);
+}
+.fa-trash-can{
+  color: var(--red);
+}
 .line {
   width: 100%;
   height: 1px;
