feat: component ranking

--- a/evaluator/src/app/app.component.html
+++ b/evaluator/src/app/app.component.html
@@ -1,3 +1,5 @@
+<!-- <app-admin></app-admin> -->
 <!-- <app-evaluators></app-evaluators> -->
 <!-- <app-group></app-group> -->
-<app-admin></app-admin>
+<app-ranking></app-ranking>
+<!-- <app-login></app-login> -->
