feat: add logo-devs2blu-login

--- a/evaluator/src/app/components/login/login.component.html
+++ b/evaluator/src/app/components/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="body">
+  <img src="assets/img/logo-devs2blu.png" alt="logo devs2blu">
   <div class="container">
     <form>
       <h1> LOGIN </h1>
