--- a/evaluator/src/app/components/login/login.component.scss
+++ b/evaluator/src/app/components/login/login.component.scss
@@ -6,8 +6,15 @@
   min-height: 100vh;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   font-family: var(--font);
+  img{
+    max-width: 400px;
+    padding-bottom: 40px;
+    -webkit-filter: drop-shadow(0px 0px 20px rgba(0 0 0 / 90%));
+    filter: drop-shadow(0px 0px 20px rgba(0 0 0 / 90%));
+  }
 }
 
 .container {
