fix: weight created in the criterion

--- a/evaluator/src/app/components/admin/criterion/dialog-criterion/dialog-criterion.component.html
+++ b/evaluator/src/app/components/admin/criterion/dialog-criterion/dialog-criterion.component.html
@@ -12,6 +12,15 @@
       </div>
     </div>
     <div class="input-container">
+      <label for="weight"> PESO </label>
+      <div class="input-group">
+        <div class="icon">
+          <i class="fas fa-weight-hanging fa-lg"></i>
+        </div>
+        <input type="number" class="input-form" id="weight" placeholder="Ex.: 7" formControlName="weight">
+      </div>
+    </div>
+    <div class="input-container">
       <label for="description"> DESCRIÇÃO </label>
       <div class="input-group">
         <div class="icon icon-textarea">
