feat: button reveal

--- a/evaluator/src/app/components/ranking/ranking.component.html
+++ b/evaluator/src/app/components/ranking/ranking.component.html
@@ -2,9 +2,9 @@
     <div class="img"><img src="assets/img/logo-devs2blu.png" alt="logo devs2blu"></div>
     <button class="btn-exit"> SAIR </button>
 </div>
-<div class="body-loading">
-    <h1>Calculando o resultado</h1>
-    <h1>AGUARDE</h1>
+<!-- <div class="body-loading">
+    <h1>Realizando votação</h1>
+    <h2>Evento ainda não finalizado</h2>
     <div class="loader">
         <span class="loader-block"></span>
         <span class="loader-block"></span>
@@ -18,45 +18,49 @@
   </div>
   
   
-</div>
-<div class="ranking-container" *ngIf="">
+</div> -->
+<div class="ranking-container" >
     <div class="podium">
         <!-- Primeiro lugar (Dourado) -->
-        <div class="card gold" *ngIf="groups.length > 0">
+        <div class="card gold" *ngIf="groups.length > 0" [ngClass]="{ 'fade-transition': revelado }">
             <div class="bg">
                 <h1>1º Lugar</h1>
                 <i class="fas fa-medal fa-2xl"></i>
-                <h2>{{ groups[0].projectName.toUpperCase() }}</h2>
-                <p><span class="bold">STACK: </span>{{ groups[0].stack }}</p>
+                <h2 *ngIf="revelado">{{ groups[0].projectName.toUpperCase() }}</h2>
+                <p *ngIf="revelado"><span class="bold">STACK: </span>{{ groups[0].stack }}</p>
             </div>
             <div class="blob"></div>
         </div>
 
         <!-- Segundo lugar (Prata) -->
-        <div class="card silver" *ngIf="groups.length > 1">
+        <div class="card silver" *ngIf="groups.length > 1" [ngClass]="{ 'fade-transition': revelado }">
             <div class="bg">
                 <h1>2º Lugar</h1>
                 <i class="fas fa-medal fa-2xl"></i>
-                <h2>{{ groups[1].projectName }}</h2>
-                <p><span class="bold">STACK: </span>{{ groups[1].stack }}</p>
+                <h2 *ngIf="revelado">{{ groups[1].projectName }}</h2>
+                <p *ngIf="revelado"><span class="bold">STACK: </span>{{ groups[1].stack }}</p>
             </div>
             <div class="blob"></div>
         </div>
 
         <!-- Terceiro lugar (Bronze) -->
-        <div class="card bronze" *ngIf="groups.length > 2">
+        <div class="card bronze" *ngIf="groups.length > 2" [ngClass]="{ 'fade-transition': revelado }">
             <div class="bg">
                 <h1>3º Lugar</h1>
                 <i class="fas fa-medal fa-2xl"></i>
-                <h2>{{ groups[2].projectName }}</h2>
-                <p><span class="bold">STACK: </span>{{ groups[2].stack }}</p>
+                <h2 *ngIf="revelado">{{ groups[2].projectName }}</h2>
+                <p *ngIf="revelado"><span class="bold">STACK: </span>{{ groups[2].stack }}</p>
             </div>
             <div class="blob"></div>
         </div>
     </div>
 
+    <button class="btn-revelar" *ngIf="botaoVisivel" (click)="revelarOcultar()">
+        {{ revelado ? 'Ocultar' : 'Revelar' }}
+      </button>
+
     <!-- TODOS GRUPOS -->
-    <div class="other-groups">
+    <div class="other-groups" *ngIf="revelado" [ngClass]="{ 'fade-transition': revelado }">
         <h1>TODOS GRUPOS</h1>
         <div class="group" *ngFor="let group of groups; let i = index" [ngClass]="{'gold-list': i === 0, 'silver-list': i === 1, 'bronze-list': i === 2}">
           <div class="icon-left" >
