--- a/evaluator/src/app/components/ranking/ranking.component.scss
+++ b/evaluator/src/app/components/ranking/ranking.component.scss
@@ -40,7 +40,13 @@
   text-align: center;
   padding-top: 10px;
   h1{
-    font-size: 50px;
+    font-size: 3rem;
+  }
+  h2{
+    font-size: 1.5rem;
+  }
+  h1,h2{
+
     font-weight: 500;
     font-family: var(--font);
     padding: 10px;
@@ -297,7 +303,7 @@ body {
 
 .silver {
   .bg {
-    background: radial-gradient(ellipse farthest-corner at right bottom, #C0C0C0 0%, #A9A9A9 8%, #808080 30%, #696969 40%, transparent 80%),
+    background: radial-gradient(ellipse farthest-corner at right bottom, #C0C0C0 0%, #A9A9A9 8%, #808080b6 30%, #696969a9 40%, transparent 80%),
       radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #EAEAEA 8%, #B0B0B0 25%, #707070 62.5%, #707070 100%);
   }
 
@@ -312,9 +318,9 @@ body {
 
 .bronze {
   .bg {
-    background: radial-gradient(ellipse farthest-corner at right bottom, transparent 0%, #6C4D28 40%, #7A542E 50%, #8B5A33 60%, #A97142 80%),
-      radial-gradient(ellipse farthest-corner at left top, transparent 0%, #6C4D28 40%, #7A542E 50%, #8B5A33 60%, #A97142 80%);
-  }
+  background: radial-gradient(ellipse farthest-corner at right bottom, #D6A16B 0%, #B57F4B 8%,#865a2e 30%, #7d5431 40%, transparent 80%),
+  radial-gradient(ellipse farthest-corner at left top,#e9ccae 0%,#D6A16B 8%, #B57F4B 25%, #583311e3 62.5%,#583311e3 100%);
+}
 
   .blob {
     background-color: #cd7f32;
@@ -384,7 +390,44 @@ body {
     background-color: var(--grey);
   }
 }
+.btn-revelar{
+  width: 300px;
+  height: 50px;
+  background-color: var(--dark-blue);
+  border: none;
+  text-decoration: none;
+  font-family: var(--font);
+  font-size: 1.3rem;
+  color: var(--white);
+  margin-top: 20px;
+  transition: transform 0.2s ease-in-out;
+}
 
+.btn-revelar:hover {
+  transform: scale(1.05); 
+  animation: shake 1s cubic-bezier(0.36, 2.26, 0.72, -0.64) infinite;
+}
+
+@keyframes shake {
+  0%, 100% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    transform: translate(-2px, -2px) rotate(-2deg);
+  }
+  20%, 40%, 60%, 80% {
+    transform: translate(2px, 2px) rotate(2deg);
+  }
+}
+
+.fade{
+  opacity: 0;
+  transition: opacity 2s ease;
+}
+.fade-transition {
+  opacity: 100;
+  transition: opacity 2s ease;
+}
 
 @keyframes blob-bounce {
   0% {
