--- a/evaluator/src/app/components/login/login.component.html
+++ b/evaluator/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="body">
   <div class="container">
-    <form>
+    <form [formGroup]="form" (ngSubmit)="onLogin(form);">
       <h1> LOGIN </h1>
       <div class="line"></div>
       <div class="form-login">
@@ -9,7 +9,7 @@
           <div class="icon-container">
             <i class="fas fa-user fa-lg"></i>
           </div>
-          <input type="text" class="input-login" id="username">
+          <input type="text" class="input-login" id="username" formControlName="username">
         </div>
       </div>
       <div class="form-login">
@@ -18,7 +18,7 @@
           <div class="icon-container">
             <i class="fa-solid fa-key fa-lg"></i>
           </div>
-          <input [type]="showPassword ? 'text' : 'password'" class="input-login" id="password">
+          <input [type]="showPassword ? 'text' : 'password'" class="input-login" id="password" formControlName="password">
           <span class="toggle-password" (click)="togglePassword();"
             [ngClass]="{ 'show-password': showPassword }">
             <i class="fa" [ngClass]="showPassword ? 'fa-eye' : 'fa-eye-slash'"></i>
