--- a/evaluator/src/app/components/group/group.component.html
+++ b/evaluator/src/app/components/group/group.component.html
@@ -32,8 +32,8 @@
               <div class="icon">
                 <i class="fa-regular fa-file-code fa-lg"></i>
               </div>
-              <select [(ngModel)]="selectedDesafio" name="desafio">
-                <option *ngFor="let desafio of listaDesafios" [value]="desafio">{{desafio.toUpperCase()}}</option>
+              <select [(ngModel)]="challenge" name="desafio">
+                <option *ngFor="let challenge of challengeList" [value]="challenge"> {{ challenge.toUpperCase() }} </option>
               </select>
             </div>
           </div>
@@ -70,7 +70,7 @@
             </div>
           </div>
           <div class="form-actions">
-            <button type="submit" class="submit"> {{ tipo }} </button>
+            <button type="submit" class="submit"> {{ type }} </button>
           </div>
         </form>
       </div>
@@ -88,15 +88,15 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let criterio of criterios">
-              <td> {{ criterio.nome }} </td>
+            <tr *ngFor="let criterion of criteria">
+              <td> {{ criterion.name }} </td>
               <td>
                 <div class="progress-bar">
-                  <div class="progress" [style.width.%]="(criterio.nota / 10) * 100"></div>
-                  <div class="ball" [style.left.%]="(criterio.nota / 10) * 100"></div>
+                  <div class="progress" [style.width.%]="(criterion.grade / 10) * 100"></div>
+                  <div class="ball" [style.left.%]="(criterion.grade / 10) * 100"></div>
                 </div>
               </td>
-              <td>{{ criterio.nota }}</td>
+              <td>{{ criterion.grade }}</td>
             </tr>
           </tbody>
         </table>
