--- a/evaluator/src/app/components/ranking/ranking.component.html
+++ b/evaluator/src/app/components/ranking/ranking.component.html
@@ -1,8 +1,10 @@
-<div class="header">
-    <div class="img"><img src="assets/img/logo-devs2blu.png" alt="logo devs2blu"></div>
-    <button class="btn-exit"> SAIR </button>
-</div>
-<!-- <div class="body-loading">
+<div class="body">
+    <div class="overlay" *ngIf="overlayVisible"></div>
+
+    <div class="header">
+        <div class="img"><img src="assets/img/logo-devs2blu.png" alt="logo devs2blu"></div>
+    </div>
+    <!-- <div class="body-loading">
     <h1>Realizando votação</h1>
     <h2>Evento ainda não finalizado</h2>
     <div class="loader">
@@ -19,65 +21,65 @@
   
   
 </div> -->
-<div class="ranking-container" >
-    <div class="podium">
-        <!-- Primeiro lugar (Dourado) -->
-        <div class="card gold" *ngIf="groups.length > 0" [ngClass]="{ 'fade-transition': revelado }">
-            <div class="bg">
-                <h1>1º Lugar</h1>
-                <i class="fas fa-medal fa-2xl"></i>
-                <h2 *ngIf="revelado">{{ groups[0].projectName.toUpperCase() }}</h2>
-                <p *ngIf="revelado"><span class="bold">STACK: </span>{{ groups[0].stack }}</p>
+    <div class="ranking-container">
+        <div class="podium">
+            <!-- Primeiro lugar (Dourado) -->
+            <div class="card gold" *ngIf="groups.length > 0">
+                <div class="bg">
+                    <h1>1º Lugar</h1>
+                    <i class="fas fa-medal fa-2xl"></i>
+                    <h2 *ngIf="revelado1">{{ groups[0].projectName.toUpperCase() }}</h2>
+                    <p *ngIf="revelado1"><span class="bold">STACK: </span>{{ groups[0].stack }}</p>
+                </div>
+                <div class="blob"></div>
             </div>
-            <div class="blob"></div>
+
+            <!-- Segundo lugar (Prata) -->
+            <div class="card silver" *ngIf="groups.length > 1">
+                <div class="bg">
+                    <h1>2º Lugar</h1>
+                    <i class="fas fa-medal fa-2xl"></i>
+                    <h2 *ngIf="revelado2">{{ groups[1].projectName }}</h2>
+                    <p *ngIf="revelado2"><span class="bold">STACK: </span>{{ groups[1].stack }}</p>
+                </div>
+                <div class="blob"></div>
+            </div>
+
+            <!-- Terceiro lugar (Bronze) -->
+            <div class="card bronze" *ngIf="groups.length > 2">
+                <div class="bg">
+                    <h1>3º Lugar</h1>
+                    <i class="fas fa-medal fa-2xl"></i>
+                    <h2 *ngIf="revelado3">{{ groups[2].projectName }}</h2>
+                    <p *ngIf="revelado3"><span class="bold">STACK: </span>{{ groups[2].stack }}</p>
+                </div>
+                <div class="blob"></div>
+            </div>
         </div>
 
-        <!-- Segundo lugar (Prata) -->
-        <div class="card silver" *ngIf="groups.length > 1" [ngClass]="{ 'fade-transition': revelado }">
-            <div class="bg">
-                <h1>2º Lugar</h1>
-                <i class="fas fa-medal fa-2xl"></i>
-                <h2 *ngIf="revelado">{{ groups[1].projectName }}</h2>
-                <p *ngIf="revelado"><span class="bold">STACK: </span>{{ groups[1].stack }}</p>
+        <button class="btn-revelar" *ngIf="botaoVisivel" (click)="revelarOcultar()"> REVELAR </button>
+
+        <!-- TODOS GRUPOS -->
+        <div class="other-groups" *ngIf="revelado1">
+            <h1>RANKING COMPLETO</h1>
+            <div class="group" *ngFor="let group of groups; let i = index"
+                [ngClass]="{'gold-list': i === 0, 'silver-list': i === 1, 'bronze-list': i === 2}">
+                <div class="icon-left">
+                    <div class="icon" *ngIf="i < 3">
+                        <i class="fa-solid fa-ranking-star fa-xl"></i>
+                    </div>
+                    <div class="line-y" *ngIf="i < 3"></div>
+                    <div class="position">{{i + 1}}</div>
+                    <div class="line-y"></div>
+                </div>
+                <div class="right">
+                    <h2>{{ group.projectName }}</h2>
+                    <p><span class="bold">STACK: </span>{{ group.stack }}</p>
+                    <p><span class="bold">Membros: </span>{{ group.teamMembers }}</p>
+                </div>
             </div>
-            <div class="blob"></div>
         </div>
 
-        <!-- Terceiro lugar (Bronze) -->
-        <div class="card bronze" *ngIf="groups.length > 2" [ngClass]="{ 'fade-transition': revelado }">
-            <div class="bg">
-                <h1>3º Lugar</h1>
-                <i class="fas fa-medal fa-2xl"></i>
-                <h2 *ngIf="revelado">{{ groups[2].projectName }}</h2>
-                <p *ngIf="revelado"><span class="bold">STACK: </span>{{ groups[2].stack }}</p>
-            </div>
-            <div class="blob"></div>
-        </div>
+
     </div>
-
-    <button class="btn-revelar" *ngIf="botaoVisivel" (click)="revelarOcultar()">
-        {{ revelado ? 'Ocultar' : 'REVELAR' }}
-      </button>
-
-    <!-- TODOS GRUPOS -->
-    <div class="other-groups" *ngIf="revelado" [ngClass]="{ 'fade-transition': revelado }">
-        <h1>RANKING COMPLETO</h1>
-        <div class="group" *ngFor="let group of groups; let i = index" [ngClass]="{'gold-list': i === 0, 'silver-list': i === 1, 'bronze-list': i === 2}">
-          <div class="icon-left" >
-            <div class="icon" *ngIf="i < 3">
-                <i class="fa-solid fa-ranking-star fa-xl"></i>
-            </div>
-            <div class="line-y"></div>
-            <div class="position">{{i + 1}}</div>
-            <div class="line-y"></div>
-          </div>
-          <div class="right">
-            <h2>{{ group.projectName }}</h2>
-            <p><span class="bold">STACK: </span>{{ group.stack }}</p>
-            <p><span class="bold">Membros: </span>{{ group.teamMembers }}</p>
-          </div>
-        </div>
-      </div>
-      
-      
 </div>
