--- a/evaluator/src/app/components/ranking/ranking.component.scss
+++ b/evaluator/src/app/components/ranking/ranking.component.scss
@@ -1,5 +1,52 @@
 @import url(src/styles.scss);
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(68, 68, 68, 0.7);
+  z-index: 9999;
+}
+
+.btn-revelar {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  height: 50px;
+  background-color: var(--dark-blue);
+  border: none;
+  text-decoration: none;
+  font-family: var(--font);
+  font-size: 1.3rem;
+  color: var(--white);
+  z-index: 10000;
+  transition: transform 0.4s ease-in-out;
+  box-shadow: var(--shadow);
+}
+
+.btn-revelar:hover {
+  transform: translate(-50%, -50%) scale(1.5);
+
+}
+
+.btn-revelar.revelando {
+  animation: revelarAnimacao 3s ease-in-out forwards;
+}
+
+.tremor1 {
+  animation: shake1 7s cubic-bezier(0.36, 2.26, 0.72, -0.64) both;
+}
+.tremor2 {
+  animation: shake2 4s cubic-bezier(0.36, 2.26, 0.72, -0.64) both;
+}
+.tremor3 {
+  animation: shake3 3s cubic-bezier(0.36, 2.26, 0.72, -0.64) both;
+}
+
 // -------- HEADER
 .header {
   background-color: var(--dark-blue);
@@ -39,13 +86,17 @@
   width: 100%;
   text-align: center;
   padding-top: 10px;
-  h1{
+
+  h1 {
     font-size: 3rem;
   }
-  h2{
+
+  h2 {
     font-size: 1.5rem;
   }
-  h1,h2{
+
+  h1,
+  h2 {
 
     font-weight: 500;
     font-family: var(--font);
@@ -54,6 +105,7 @@
     line-height: 1.3;
   }
 }
+
 .loader {
   position: absolute;
   top: 60%;
@@ -157,40 +209,55 @@
 }
 
 @-webkit-keyframes pulse {
+
   from,
   40% {
     background: var(--light-blue);
   }
+
   to {
     background: #dadada;
   }
 }
+
 @-webkit-keyframes show {
-  from, 40% {
+
+  from,
+  40% {
     opacity: 0;
   }
-  41%, to {
+
+  41%,
+  to {
     opacity: 1;
   }
 }
+
 @keyframes pulse {
+
   from,
   40% {
     background: var(--dark-blue);
   }
+
   to {
     background: #dadada;
   }
 }
+
 @keyframes show {
-  from, 40% {
+
+  from,
+  40% {
     opacity: 0;
   }
-  41%, to {
+
+  41%,
+  to {
     opacity: 1;
   }
 }
-/* Body styling */
+
 html,
 body {
   height: 100%;
@@ -202,6 +269,7 @@ body {
   background: #999 -webkit-radial-gradient(circle farthest-side, #333333, #111111);
   background: #999 radial-gradient(circle farthest-side, #333333, #111111);
 }
+
 // END LOADING
 .ranking-container {
   text-align: center;
@@ -248,6 +316,7 @@ body {
   font-family: var(--font);
   color: var(--white);
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  z-index: -1;
 
   h1 {
     padding: 20px 20px 35px;
@@ -318,9 +387,9 @@ body {
 
 .bronze {
   .bg {
-  background: radial-gradient(ellipse farthest-corner at right bottom, #D6A16B 0%, #B57F4B 8%,#865a2e 30%, #7d5431 40%, transparent 80%),
-  radial-gradient(ellipse farthest-corner at left top,#e9ccae 0%,#D6A16B 8%, #B57F4B 25%, #583311e3 62.5%,#583311e3 100%);
-}
+    background: radial-gradient(ellipse farthest-corner at right bottom, #D6A16B 0%, #B57F4B 8%, #865a2e 30%, #7d5431 40%, transparent 80%),
+      radial-gradient(ellipse farthest-corner at left top, #e9ccae 0%, #D6A16B 8%, #B57F4B 25%, #583311e3 62.5%, #583311e3 100%);
+  }
 
   .blob {
     background-color: #cd7f32;
@@ -330,24 +399,28 @@ body {
     color: #cd7f32;
   }
 }
-.gold-list, .silver-list, .bronze-list{
+
+.gold-list,
+.silver-list,
+.bronze-list {
   color: var(--white);
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.274);
 
 }
+
 .gold-list {
-  background: linear-gradient(to bottom right, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
-              linear-gradient(to top left, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+  background: linear-gradient(to top left, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
+    linear-gradient(to bottom right, #fff7dd 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
 }
 
 .silver-list {
-  background: linear-gradient(to top right, #C0C0C0 0%, #A9A9A9 8%, #808080b6 30%, #696969a9 40%, transparent 80%),
-              linear-gradient(to bottom left, #FFFFFF 0%, #EAEAEA 8%, #B0B0B0 25%, #707070 62.5%, #707070 100%);
+  background: linear-gradient(to top left, #C0C0C0 0%, #A9A9A9 8%, #808080b6 30%, #696969a9 40%, transparent 80%),
+    linear-gradient(to bottom right, #e6e6e6 0%, #EAEAEA 8%, #B0B0B0 25%, #707070 62.5%, #707070 100%);
 }
 
 .bronze-list {
-  background: linear-gradient(to bottom right, #D6A16B 0%, #B57F4B 8%, #865a2e 30%, #7d5431 40%, transparent 80%),
-              linear-gradient(to top left, #e9ccae 0%, #D6A16B 8%, #B57F4B 25%, rgba(88, 51, 17, 0.89) 62.5%, rgba(88, 51, 17, 0.89) 100%);
+  background: linear-gradient(to top left, #D6A16B 0%, #B57F4B 8%, #865a2e 30%, #7d5431 40%, transparent 80%),
+    linear-gradient(to bottom right, #e9ccae 0%, #D6A16B 8%, #B57F4B 25%, rgba(88, 51, 17, 0.89) 62.5%, rgba(88, 51, 17, 0.89) 100%);
 }
 
 .gold-list,
@@ -397,35 +470,12 @@ body {
     background-color: var(--grey);
   }
 }
-.other-groups .bold, h2{
+
+.other-groups .bold,
+h2 {
   font-weight: bold;
 }
-.btn-revelar{
-  width: 300px;
-  height: 50px;
-  background-color: var(--dark-blue);
-  border: none;
-  text-decoration: none;
-  font-family: var(--font);
-  font-size: 1.3rem;
-  color: var(--white);
-  margin-top: 20px;
-  transition: transform 0.2s ease-in-out;
-}
 
-.btn-revelar:hover {
-  transform: scale(1.05); 
-  animation: shake 1s cubic-bezier(0.36, 2.26, 0.72, -0.64) infinite;
-}
-
-.fade{
-  opacity: 0;
-  transition: opacity 2s ease;
-}
-.fade-transition {
-  opacity: 100;
-  transition: opacity 2s ease;
-}
 
 @keyframes blob-bounce {
   0% {
@@ -449,14 +499,53 @@ body {
   }
 }
 
-@keyframes shake {
-  0%, 100% {
+@keyframes revelarAnimacao {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+
+  100% {
+    opacity: 0;
+    transform: scale(1.05);
+  }
+}
+
+@keyframes shake1 {
+  0%,
+  100% {
     transform: translate(0, 0) rotate(0deg);
   }
   10%, 30%, 50%, 70%, 90% {
-    transform: translate(-2px, -2px) rotate(-2deg);
+    transform: translate(-3px, -3px) rotate(-3deg);
   }
   20%, 40%, 60%, 80% {
-    transform: translate(2px, 2px) rotate(2deg);
+    transform: translate(3px, 3px) rotate(3deg);
+  }
+}
+
+@keyframes shake2 {
+  0%,
+  100% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    transform: translate(2px, -2px) rotate(2deg);
+  }
+  20%, 40%, 60%, 80% {
+    transform: translate(-2px, 2px) rotate(-2deg);
+  }
+}
+
+@keyframes shake3 {
+  0%,
+  100% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    transform: translate(-4px, 0px) rotate(-4deg);
+  }
+  20%, 40%, 60%, 80% {
+    transform: translate(4px, 0px) rotate(4deg);
   }
 }
